Changed color and Bolded words

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
   </main><br>
 
-    <p>A little about your friendly gamer. My name is Payne Vue and I am currently taking classes to become a web developer. I am currently learning html at Correlation1 and It's been going pretty great so far! It's been a while since I have been back in school so It's been nice using my brain again and not just working my self to death. So far I think what I find the most interesting is making image maps and forms. I've always wondered how all this works and now I'm on the inside and doing it! So, i would like to thank everyone at Correlation1! Thanks guys, for everything you guys do and expect big things from me!
+    <p style="color: red"><strong>A little about your friendly gamer.</strong> My name is Payne Vue and I am currently taking classes to become a web developer. I am currently learning html at Correlation1 and It's been going pretty great so far! It's been a while since I have been back in school so It's been nice using my brain again and not just working my self to death. So far I think what I find the most interesting is making image maps and forms. I've always wondered how all this works and now I'm on the inside and doing it! So, i would like to thank everyone at Correlation1! Thanks guys, for everything you guys do and expect big things from me!
     </p>
   
     <h4>Sign up for Friendly Gamer &trade;</h4>
