--- a/index.html
+++ b/index.html
@@ -13,13 +13,66 @@
 
 <body class="wrapper container">
 
-	  <h1>Need a friend to game with?</h1><br>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#" text="">Friendly Gamer</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="aboutme.html">AboutMe</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Me</a>
+          </li>
+        </ul>
+        <button type="button" class="btn btn-outline-primary mx-3">Log In</button>
+        <button type="button" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Subscribe</button>
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Subcribe</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="form-floating mb-3">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="floatingInput"
+                      placeholder="Full name"
+                    >
+                    <label for="floatingInput">Full name</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="floatingInput"
+                      placeholder="name@example.com"
+                    >
+                    <label for="floatingInput">Email address</label>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button data-bs-dismiss="modal" type="button" class="btn btn-primary">Subscribe</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+  </nav>
 
-      <img src="img/gamingh.jpg" width="25%"><br><br>
+      <br><br><img src="img/gamingh.jpg" width="25%"><br><br>
 
 	  <h2>Friendly Gamer is there for you</h2>
-    <p>
-    Welcome to a safe gaming space where I will play any game with you. Either to teach you or simply just play with you and have a good time. Maybe you're trying to learn a game to impress someone, or just always wanted to learn how to play it. Maybe you're just not living up to your own potential and need some light coaching. Maybe you're just lonely and need a friend and just want to have a good fun night. Well, look no further! I am all of those in one! I've been playing games for as long as I could remember and love meeting new people! I will try my best to get know you, to better match our vibe.  We can play competitively or just have a chill gamer time, dealers choice. Here are a list of games I'm proficient at but dont feel discouraged to pick a game that is not on the list. Feel free to check out my ranks within each game too.<br>
+    <p style="color: red;"><strong>
+    Welcome to a safe gaming space where I will play any game with you.</strong> Either to teach you or simply just play with you and have a good time. Maybe you're trying to learn a game to impress someone, or just always wanted to learn how to play it. Maybe you're just not living up to your own potential and need some light coaching. Maybe you're just lonely and need a friend and just want to have a good fun night. Well, look no further! I am all of those in one! I've been playing games for as long as I could remember and love meeting new people! I will try my best to get know you, to better match our vibe.  We can play competitively or just have a chill gamer time, dealers choice. Here are a list of games I'm proficient at but dont feel discouraged to pick a game that is not on the list. Feel free to check out my ranks within each game too.<br>
     </p><br>
 
   <main class="main container">
@@ -50,31 +103,6 @@
       </div>
     </section>
   </main><br>
-
-    <p style="color: red;"><strong>A little about your friendly gamer.</strong> My name is Payne Vue and I am currently taking classes to become a web developer. I am currently learning html at Correlation1 and It's been going pretty great so far! It's been a while since I have been back in school so It's been nice using my brain again and not just working my self to death. So far I think what I find the most interesting is making image maps and forms. I've always wondered how all this works and now I'm on the inside and doing it! So, i would like to thank everyone at Correlation1! Thanks guys, for everything you guys do and expect big things from me!
-    </p>
-  
-    <h4>Sign up for Friendly Gamer &trade;</h4>
-      <form>
-        <label for="name">Name: </label>
-        <input type="text" name="name" id="name" class="subscribe" placeholder="Name"><br><br>
-
-        <label for="Email">Email:</label>
-        <input type="email" name="Email" id="Email" class="subscribe" placeholder="Email"><br><br>
-        <input type=submit value="Subscribe">
-      </form>
-
-  <footer>
-    <div class="footer__content">
-      <h5>Follow me at</h5>
-        <img src="img/FIY.jpg" usemap="#image_map">
-        <map name="image_map">
-          <area alt="FB" title="FB" target=blank href="https://www.facebook.com/payne.vue/" coords="1,0,38,50" shape="rect">
-          <area alt="Insta" title="Insta" target=blank href="https://www.instagram.com/panyevue/" coords="42,2,84,52" shape="rect">
-          <area alt="YT" title="YT" target=blank href="https://www.youtube.com/@PaPaPayne" coords="88,2,149,51" shape="rect">
-        </map>
-    </div>
-  </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
