Removed color and bold

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <br><br><img src="img/gamingh.jpg" width="25%"><br><br>
 
 	  <h2>Friendly Gamer is there for you</h2>
-    <p style="color: red;"><strong>
-    Welcome to a safe gaming space where I will play any game with you.</strong> Either to teach you or simply just play with you and have a good time. Maybe you're trying to learn a game to impress someone, or just always wanted to learn how to play it. Maybe you're just not living up to your own potential and need some light coaching. Maybe you're just lonely and need a friend and just want to have a good fun night. Well, look no further! I am all of those in one! I've been playing games for as long as I could remember and love meeting new people! I will try my best to get know you, to better match our vibe.  We can play competitively or just have a chill gamer time, dealers choice. Here are a list of games I'm proficient at but dont feel discouraged to pick a game that is not on the list. Feel free to check out my ranks within each game too.<br>
+    <p>
+    Welcome to a safe gaming space where I will play any game with you. Either to teach you or simply just play with you and have a good time. Maybe you're trying to learn a game to impress someone, or just always wanted to learn how to play it. Maybe you're just not living up to your own potential and need some light coaching. Maybe you're just lonely and need a friend and just want to have a good fun night. Well, look no further! I am all of those in one! I've been playing games for as long as I could remember and love meeting new people! I will try my best to get know you, to better match our vibe.  We can play competitively or just have a chill gamer time, dealers choice. Here are a list of games I'm proficient at but dont feel discouraged to pick a game that is not on the list. Feel free to check out my ranks within each game too.<br>
     </p><br>
 
   <main class="main container">
